<resources>
    <string name="app_name">InventoryWidget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloTooladd">Agregar producto</string>
    <string name="tituloToolDetails">Detalles del producto</string>
    <string name="tituloToolEdit">Editar producto</string>
    <string name="tituloToolbarHome">Inventario</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="appwidget_img">logo</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="text_widget_inventory">Inventory</string>
    <string name="text_widget_cuantoT">¿Cuánto tengo de inventario?</string>
    <string name="total_invetanry">****</string>
    <string name="text_widget_GestionarI">Gestionar inventario</string>

</resources>