<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Proyecto2.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@style/Theme.Proyecto2.AppWidgetContainer">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="2dp">

        <ImageView
            android:id="@+id/ivLogoW"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/appwidget_img"
            android:foregroundGravity="center"
            android:src="@drawable/icono" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivLogoW"
            android:foregroundGravity="center"
            android:text="@string/text_widget_inventory"
            android:textColor="@color/textColorWibget"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="0dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_widget_cuantoT"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="13dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/visibility"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-4dp"
                android:clickable="true"
                android:gravity="center"
                android:padding="4dp"
                android:src="@drawable/visibility_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:text="$"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtTotalProductos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/total_invetanry"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gestionarText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:text="@string/text_widget_GestionarI"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/gestionarIcon"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginRight="-8dp"
                android:clickable="true"
                android:gravity="center"
                android:padding="8dp"
                android:src="@drawable/manufacturing_24" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>